@@ -8,6 +8,7 @@ ___________________________________________________________
 -> Added title of articles, board threads, news and static pages to the end of func:title (hajo)
 -> Removed support for RSS in servers mod (hajo)
 -> Reworked handling of charsets for PostgreSQL and MySQL drivers (hajo)
+-> Reworked parts of the cups module: now a cups tree is included and the match generation is no longer by random after the first round (duriel)
 
 -- Fixed a huge number of bugs that were reported at "Trac" --
 
